--- a/with_feature_reduction.ipynb
+++ b/with_feature_reduction.ipynb
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "mutation = pd.read_csv('eno.csv')\n",
+    "mutation = pd.read_csv('glioma.csv')\n",
     "\n",
     "\n",
     "features = mutation.drop(columns=['Grade']) \n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e958bccc",
+   "id": "f0ad42ee",
    "metadata": {},
    "source": [
     "Feature scaling is done to ensure that the age column is not contributing or giving too much importance \n",
